--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity" tools:background="@android:color/background_light" android:id="@+id/layout">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="wrap_content"
+            android:layout_height="66dp"
+            android:text="Memory game\nWybierz wielkość planszy:"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/background_dark"
+            android:textSize="24sp"
+            android:id="@+id/textView" android:textAlignment="center" android:textStyle="bold"
+            android:textAllCaps="false" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="@+id/Guideline0.1" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/Guideline0.9" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline" android:layout_marginTop="8dp"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="263dp"
+            android:layout_height="146dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="@+id/Guideline0.1" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline2"
+            app:layout_constraintEnd_toStartOf="@+id/Guideline0.9" android:id="@+id/buttonBox">
+        <Button
+                android:text="4 x 4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button4x4"/>
+        <Button
+                android:text="6 x 6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button6x6"/>
+        <Button
+                android:text="8 x 8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button8x8"/>
+    </LinearLayout>
+    <android.support.constraint.Guideline
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="150dp" android:id="@+id/guideline"/>
+    <android.support.constraint.Guideline
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="327dp" android:id="@+id/guideline2"/>
+    <android.support.constraint.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="39dp" android:id="@+id/Guideline0.1"
+            app:layout_constraintGuide_percent="0.1"/>
+    <android.support.constraint.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="-219dp"
+            android:id="@+id/Guideline0.9" app:layout_constraintGuide_percent="0.9"/>
+    <TextView
+            android:text="Made by:\nWojciech Olejarz\ns15954"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/Autorhehe" android:textAlignment="center"
+            android:textColor="@android:color/black" android:textStyle="bold" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="@+id/Guideline0.1" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/Guideline0.9" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0" android:textSize="8sp"/>
 
 </android.support.constraint.ConstraintLayout>
