--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,5 +71,14 @@
             app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
             app:layout_constraintHorizontal_bias="0.0" android:textSize="8sp"/>
+    <Button
+            android:text="Albo po prostu wyjdź bo nie podoba Ci się design"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/exit" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/Guideline0.9"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/Guideline0.1"
+            android:layout_marginStart="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
