--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -21,11 +21,54 @@
         <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
     </TableLayout>
     <TextView
-            android:text="Gratulacje! Odkryłeś wszystkie karty!"
+            android:text="Gratulacje! Odkryłeś wszystkie karty!\nTwój ostateczny czas:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/winner" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/colorAccent" android:textSize="18sp" android:visibility="invisible"/>
+            android:textColor="@color/colorAccent" android:textSize="18sp" android:visibility="invisible"
+            android:textAlignment="center"/>
+    <TextView
+            android:text="0 : 0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timer"
+            app:layout_constraintBottom_toTopOf="@+id/tableLayout" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/winner" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:textStyle="bold" android:textColor="@color/colorAccent"
+            android:textSize="24sp"/>
+    <TextView
+            android:text="Czy chcesz zagrać ponownie?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pytanko"
+            app:layout_constraintTop_toBottomOf="@+id/tableLayout" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:textSize="18sp" android:textColor="@color/colorAccent"
+            android:visibility="invisible"/>
+    <Button
+            android:text="Tak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tak" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/pytanko"
+            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"
+            android:visibility="invisible"/>
+    <Button
+            android:text="Nie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nie" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/pytanko" app:layout_constraintStart_toStartOf="@+id/guideline4"
+            android:layout_marginStart="8dp" android:visibility="invisible"/>
+    <android.support.constraint.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintGuide_begin="199dp" android:id="@+id/guideline4"/>
 </android.support.constraint.ConstraintLayout>
